TestCases/Errors/Haversine/observations/sst/spr_11_obs.spm
obs r3-c12 0.0209375
obs r3-c13 0.0152420634920635
obs r3-c14 0.00620653594771242
obs r4-c14 0.00631519274376417
obs r5-c14 1e-08
obs r3-c15 0.01
obs r4-c15 0.0118244047619048
obs r5-c15 1e-08
obs r6-c15 0.0085
obs r6-c16 0.00952380952380952
obs r7-c16 0.00952380952380952
error_value r3-c12 0.2
error_value r3-c13 0.2
error_value r3-c14 0.2
error_value r4-c14 0.2
error_value r5-c14 0.2
error_value r3-c15 0.2
error_value r4-c15 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
